# arcade

./: .gitconfig  .gitignore  README.md  licence.txt  pyproject.toml  requirements.txt
calculator/: calculator.py
calculator/data/: codon_adaptiveness.json  max_codon_adaptiveness.json
checkpoint/: adapter_config.json
checkpoint/2025-03-24-23-38-02/: README.md  adapter_config.json
checkpoint/__MACOSX/: ._codonbert
checkpoint/__MACOSX/codonbert/: ._.ipynb_checkpoints
checkpoint/arcade/: README.md  adapter_config.json
data/: steering_vectors.md
data/GENCODE/: README.md  fetch_GENCODE.py
scripts/: README.md  fetch_steering_vectors.py  finetune_token_cls.py  recons_token_cls.py
scripts/utils/: load_utils.py  seq_codon2aa.py
utils/: load_utils.py  mapping.py
