[tool.poetry]
name = "arcade"
version = "0.1.0"
description = ""
authors = ["jiayili <lijiayi@andrew.cmu.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
accelerate = "0.21.0"
accuracy = "0.1.1"
aiobotocore = "2.5.4"
aiohttp = "3.9.5"
aiohttp-retry = "2.8.3"
aioitertools = "0.11.0"
aiosignal = "1.3.1"
altair = "5.5.0"
amqp = "5.2.0"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.8.0"
appdirs = "1.4.4"
asttokens = "2.4.1"
async-timeout = "4.0.3"
asyncssh = "2.14.2"
atpublic = "4.1.0"
attrdict = "2.0.1"
attrs = "23.2.0"
backcall = "0.2.0"
backports-tarfile = "1.2.0"
billiard = "4.2.0"
biopython = "1.83"
biotite = "0.34.1"
bitsandbytes = "0.45.3"
blis = "1.2.0"
boto3 = "1.28.17"
botocore = "1.31.17"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
catalogue = "2.0.10"
celery = "5.4.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
cloudpathlib = "0.21.0"
cloudpickle = "3.0.0"
clumper = "0.2.15"
colorama = "0.4.6"
comm = "0.2.2"
confection = "0.1.5"
configobj = "5.0.8"
contourpy = "1.1.1"
cramjam = "2.8.3"
crashtest = "0.4.1"
cryptography = "42.0.5"
cycler = "0.12.1"
cymem = "2.0.11"
cython = "3.0.11"
databricks-cli = "0.17.8"
datasets = "2.14.4"
debugpy = "1.8.2"
decorator = "5.1.1"
dictdiffer = "0.9.0"
diskcache = "5.6.3"
distlib = "0.3.9"
distro = "1.9.0"
dpath = "2.1.6"
evaluate = "0.4.1"
exceptiongroup = "1.2.2"
executing = "2.0.1"
fastjsonschema = "2.21.1"
fastparquet = "0.8.3"
filelock = "3.13.4"
findpython = "0.6.2"
flatten-dict = "0.4.2"
flufl-lock = "8.1.0"
fonttools = "4.51.0"
frozenlist = "1.4.1"
fsspec = "2023.9.2"
funcy = "2.0"
gensim = "4.3.2"
gitdb = "4.0.11"
gitpython = "3.1.43"
grandalf = "0.8"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
huggingface-hub = "0.22.2"
hydra-core = "1.3.2"
idna = "3.6"
importlib-metadata = "8.6.1"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
iterative-telemetry = "0.0.8"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jedi = "0.19.1"
jeepney = "0.8.0"
jinja2 = "3.1.6"
jmespath = "1.0.1"
joblib = "1.4.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
keyring = "25.6.0"
kiwisolver = "1.4.5"
kombu = "5.3.7"
langcodes = "3.5.0"
language-data = "1.3.0"
lightgbm = "3.3.5"
llvmlite = "0.41.1"
logbook = "1.7.0.post0"
marisa-trie = "1.2.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib = "3.7.5"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
modal-python = "0.4.2.1"
more-itertools = "10.6.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
murmurhash = "1.0.12"
nanotime = "0.5.2"
narwhals = "1.31.0"
ncbi-genome-download = "0.3.3"
nest-asyncio = "1.6.0"
networkx = "3.1"
nltk = "3.8.1"
numba = "0.58.1"
numpy = "1.26.0"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-cusparselt-cu12 = "0.6.2"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
oauthlib = "3.2.2"
omegaconf = "2.3.0"
orjson = "3.10.1"
p-tqdm = "1.4.2"
packaging = "24.1"
pandas = "2.2.3"
parso = "0.8.4"
pathspec = "0.12.1"
pbs-installer = "2025.2.12"
peft = "0.10.0"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pillow = "10.3.0"
pkginfo = "1.12.0"
platformdirs = "4.2.2"
poetry = "2.1.1"
poetry-core = "2.1.1"
pox = "0.3.5"
ppft = "1.7.6.9"
preshed = "3.0.9"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyarrow = "9.0.0"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
pydot = "2.0.0"
pygit2 = "1.13.3"
pygments = "2.17.2"
pygtrie = "2.5.0"
pyjwt = "2.8.0"
pynndescent = "0.5.13"
pyparsing = "3.1.2"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.1"
pyzmq = "26.0.3"
rapidfuzz = "3.12.1"
referencing = "0.36.2"
regex = "2024.4.16"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
responses = "0.18.0"
rich = "13.7.1"
rpds-py = "0.23.1"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
s3fs = "2023.9.2"
s3transfer = "0.6.2"
safetensors = "0.4.3"
scikit-learn = "1.3.2"
scipy = "1.14.1"
scmrepo = "1.4.1"
seaborn = "0.12.2"
secretstorage = "3.3.3"
shap = "0.41.0"
shellingham = "1.5.4"
shortuuid = "1.0.13"
shtab = "1.7.1"
six = "1.16.0"
skorch = "0.9.0"
slicer = "0.0.7"
smart-open = "7.0.4"
smmap = "5.0.1"
sniffio = "1.3.1"
spacy = "3.8.4"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqltrie = "0.11.0"
srsly = "2.5.1"
stack-data = "0.6.3"
sympy = "1.13.1"
tabulate = "0.9.0"
thinc = "8.3.4"
threadpoolctl = "3.4.0"
tokenizers = "0.13.3"
tomli = "2.2.1"
tomlkit = "0.12.4"
torch = "2.6.0"
tornado = "6.4.1"
tqdm = "4.66.2"
traitlets = "5.14.3"
transformers = "4.33.3"
triton = "3.2.0"
trove-classifiers = "2025.1.15.22"
typer = "0.15.2"
typing-extensions = "4.12.2"
tzdata = "2024.1"
umap-learn = "0.5.7"
urllib3 = "1.26.18"
viennarna = "2.7.0"
vine = "5.1.0"
virtualenv = "20.29.2"
voluptuous = "0.14.2"
wasabi = "1.1.3"
wcwidth = "0.2.13"
weasel = "0.4.1"
wrapt = "1.16.0"
xxhash = "3.4.1"
yarl = "1.9.4"
zc-lockfile = "3.0.post1"
zipp = "3.21.0"
zstandard = "0.23.0"

[tool.poetry.group.dev]
optional = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
